
[package]
name = "PlanetPixel"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3

[dependencies]
fastnoise-lite = "1.1.1"
rand = "0.9.1"
rayon = "1.10.0"
winapi = {version = "0.3", features = ["wincon", "winuser"]}





[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["image","ttf"]
